--- a/webapp/src/components/ParcelDetailPage/ParcelDetailPage.css
+++ b/webapp/src/components/ParcelDetailPage/ParcelDetailPage.css
@@ -40,27 +40,8 @@
   color: var(--gray);
 }
 
-@media (max-width: 992px) {
-  .ParcelDetailPage .parcel-owner-container, ParcelDetail .parcel-actions-container {
+@media (max-width: 768px) {
+  .ParcelDetailPage .parcel-owner-container {
     text-align: left !important;
-  }
-
-  .ParcelDetailPage .ui.stackable.grid {
-    width: auto;
-    margin-left: 0!important;
-    margin-right: 0!important;
-  }
-
-  .ParcelDetailPage .ui.stackable.grid:not(.vertically)>.row {
-      margin: 0;
-      padding: 0;
-  }
-
-  .ParcelDetailPage .ui.stackable.grid>.row>.column, .ParcelDetailPage .ui.stackable.grid>.row>.wide.column{
-    width: 100%!important;
-    margin: 0 0!important;
-    -webkit-box-shadow: none!important;
-    box-shadow: none!important;
-    padding: 1rem 1rem!important;
   }
 }
