--- a/webapp/src/components/EstateDetailPage/EstateDetail.css
+++ b/webapp/src/components/EstateDetailPage/EstateDetail.css
@@ -31,22 +31,22 @@
   text-align: right !important;
 }
 
-.EstateDetail .row .parcels.column {
+.EstateDetail .row .estate-data.column {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
   align-content: center;
 }
 
-.EstateDetail .parcels h3 {
+.EstateDetail .estate-data h3 {
   margin: auto 0 15px 0;
 }
 
-.EstateDetail .parcels .description {
+.EstateDetail .estate-data .description {
   margin: 0 0 auto 0;
 }
 
-.EstateDetail .parcel-actions-container {
+.EstateDetail .estate-actions-container {
   text-align: right;
 }
 
@@ -126,14 +126,10 @@
 }
 
 .EstateDetail .row .column.highlights {
-  margin-top: 20px
+  margin-top: 20px;
 }
 
 @media (max-width: 768px) {
-  .EstateDetail {
-    overflow-x: hidden;
-    overflow-y: auto;
-  }
   .EstateDetail .estate-owner-container {
     text-align: left !important;
   }
