--- a/webapp/src/components/EditEstatePage/EstateSelect/EstateSelect.css
+++ b/webapp/src/components/EditEstatePage/EstateSelect/EstateSelect.css
@@ -21,10 +21,6 @@
   color: var(--gray);
 }
 
-.EstateSelect .parcel-preview {
-  height: 400px;
-}
-
 .EstateSelect .estate-selection {
   margin: 30px 0;
   font-size: 15px;
@@ -40,12 +36,11 @@
   flex-wrap: wrap;
 }
 
-.EstateSelect .estate-selection .parcels-included {
+.EstateSelect .estate-selection .parcels-included-description {
   width: 100%;
   font-size: 18px;
-  margin-top: 20px;
+  margin: 15px 0 0;
   color: var(--gray);
-  margin-bottom: 0px;
 }
 
 .tx-label {
