feat: show selected auction parcels. Test even spacing

--- a/webapp/src/components/AuctionPage/AuctionPage.css
+++ b/webapp/src/components/AuctionPage/AuctionPage.css
@@ -18,7 +18,13 @@
   flex-wrap: wrap;
 }
 
+.AuctionPage .parcels-included {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
 .AuctionPage .ParcelAttributes {
-  margin-right: 16px;
   margin-top: 20px;
+  flex-basis: 5%;
 }
