--- a/webapp/src/themes/components/Message.css
+++ b/webapp/src/themes/components/Message.css
@@ -1,6 +1,7 @@
 .ui.message {
   background-color: var(--dark-gray);
   color: white !important;
+  padding: 1em 2em 1em 1.5em;
 }
 
 .ui.warning.message {
