feat: new auction modal with video tutorial

--- a/webapp/src/components/Modal/AuctionModal/AuctionModal.css
+++ b/webapp/src/components/Modal/AuctionModal/AuctionModal.css
@@ -1,12 +1,74 @@
 .AuctionModal {
+  color: var(--text);
   text-align: center;
+}
+
+.AuctionModal .modal-body {
+  padding: 30px 45px;
+  min-height: 375px;
+}
+
+.AuctionModal .title {
+  margin-bottom: 16px;
+  font-size: 32px;
+}
+
+.AuctionModal .modal-body .description {
+  font-size: 15px;
+  line-height: 1.53;
+  letter-spacing: -0.2px;
+}
+
+.AuctionModal .modal-body .agree-to-terms {
+  margin: 40px 0;
+}
+
+.AuctionModal .modal-body .ui.checkbox label,
+.AuctionModal .modal-body .ui.checkbox label:hover {
   color: var(--text);
 }
 
-.AuctionModal .modal-loader-container {
-  padding: 100px 380px;
+.AuctionModal .modal-body .actions .button:first-child {
+  margin-bottom: 12px;
 }
 
-.AuctionModal .modal-body p {
-  font-size: 16px;
+.AuctionModal .modal-body .actions .button {
+  width: 242px;
+  height: 44px;
+  display: block;
+}
+
+.AuctionModal .modal-body.tutorial {
+  padding: 0;
+}
+
+.AuctionModal .tutorial header {
+  padding: 16px;
+  font-size: 20px;
+  position: relative;
+}
+
+.AuctionModal .tutorial header .go-back {
+  font-size: 34px;
+  top: 13px;
+  left: 16px;
+  position: absolute;
+  font-weight: 300;
+  cursor: pointer;
+}
+
+.AuctionModal .tutorial .video-container {
+  width: 100%;
+  height: 324px;
+}
+
+.AuctionModal .tutorial .video-container iframe {
+  width: 100%;
+  height: 100%;
+}
+
+@media (min-width: 767px) {
+  .AuctionModal .modal-body {
+    width: 605px;
+  }
 }
