--- a/webapp/src/themes/variables.css
+++ b/webapp/src/themes/variables.css
@@ -38,6 +38,8 @@
   --purple: #3e396b;
   --dark-purple: #5d5890;
 
+  --footer-text: #8f919a;
+
   --navbar-height: 94px;
   --footer-height: 80px;
 
