--- a/webapp/src/components/Footer/Footer.css
+++ b/webapp/src/components/Footer/Footer.css
@@ -10,6 +10,7 @@
 .Footer .social-icons a {
   margin-right: 24px;
   opacity: 0.5;
+  color: var(--footer-text);
 }
 
 .Footer .footer-column {
@@ -35,7 +36,7 @@
 
 .Footer .links a {
   margin-right: 27px;
-  color: #8f919a;
+  color: var(--footer-text);
 }
 .Footer .links a:last-child {
   margin-right: 0;
