feat: center auction by clicking on selected parcels

--- a/webapp/src/components/AuctionPage/AuctionPage.css
+++ b/webapp/src/components/AuctionPage/AuctionPage.css
@@ -113,4 +113,8 @@
   .AuctionPage .parcels-included {
     margin-top: 10px;
   }
+
+  .AuctionPage .ParcelAttributes {
+    flex-basis: 20%;
+  }
 }
