--- a/webapp/src/components/ParcelAttributes/ParcelAttributes.css
+++ b/webapp/src/components/ParcelAttributes/ParcelAttributes.css
@@ -11,19 +11,17 @@
 .ParcelAttributes .coords {
   padding: 2px 9px 2px 7px;
   margin-right: 6px;
-  font-size: 11px;
+  font-size: 15px;
   border: 1px solid var(--gray);
   color: var(--text);
   border-radius: 4px;
 }
-/*
-.ParcelAttributes .coords .Icon-marker {
-  font-size: 12px;
-  margin-right: 3px;
-  line-height: 0.9;
+
+.ParcelAttributes.clickeable {
+  cursor: pointer;
 }
-*/
-a .ParcelAttributes:hover .coords {
+
+.ParcelAttributes.clickeable:hover .coords {
   color: var(--red);
   border-color: var(--red);
 }
