feat: center auction by clicking on selected parcels

--- a/webapp/src/components/AuctionPage/AuctionPage.css
+++ b/webapp/src/components/AuctionPage/AuctionPage.css
@@ -131,6 +131,10 @@
   .AuctionPage .parcels-included {
     margin-top: 10px;
   }
+
+  .AuctionPage .ParcelAttributes {
+    flex-basis: 20%;
+  }
 }
 
 @media (max-width: 768px) {
