feat: deselect parcels

--- a/webapp/src/components/AuctionPage/AuctionPage.css
+++ b/webapp/src/components/AuctionPage/AuctionPage.css
@@ -50,8 +50,8 @@
 }
 
 .AuctionPage .ParcelAttributes {
-  margin-bottom: 20px;
-  flex-basis: 8%;
+  margin-top: 20px;
+  margin-right: 15px;
 }
 
 .AuctionPage footer {
@@ -102,19 +102,11 @@
 }
 
 @media (max-width: 992px) {
-  .AuctionPage .information-block:first-child {
-    margin-top: 30px;
-  }
-
   .AuctionPage .information-block {
     margin-top: 20px;
   }
 
   .AuctionPage .parcels-included {
     margin-top: 10px;
-  }
-
-  .AuctionPage .ParcelAttributes {
-    flex-basis: 20%;
   }
 }
