--- a/webapp/src/components/ParcelAttributes/ParcelAttributes.css
+++ b/webapp/src/components/ParcelAttributes/ParcelAttributes.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row nowrap;
   align-items: center;
+  position: relative;
 }
 
 .ParcelAttributes:after {
@@ -24,4 +25,29 @@
 .ParcelAttributes.clickeable:hover .coords {
   color: var(--red);
   border-color: var(--red);
+}
+
+.ParcelAttributes.deleteable .delete-button {
+  display: none;
+  font-size: 8px;
+  width: 16px;
+  height: 16px;
+  top: -9px;
+  right: -4px;
+  position: absolute;
+  border-radius: 20px;
+  background-color: #ff2d55;
+  color: var(--text);
+  cursor: pointer;
+}
+.ParcelAttributes.deleteable:hover .delete-button {
+  display: flex;
+  align-items: center;
+}
+
+.ParcelAttributes.deleteable .delete-button i.icon {
+  height: inherit;
+  width: inherit;
+  margin: 0 0 2px 1px;
+  flex-grow: 1;
 }
