--- a/webapp/src/components/MarketplacePage/MarketplacePage.css
+++ b/webapp/src/components/MarketplacePage/MarketplacePage.css
@@ -44,6 +44,11 @@
   padding-bottom: 0px !important;
 }
 
+.MarketplacePage .ParcelAttributes .coords {
+  font-size: 12px;
+  font-weight: 400;
+}
+
 @media (max-width: 768px) {
   .MarketplacePage .ui.secondary.pointing.menu .active.item {
     border: none;
