--- a/webapp/src/components/ParcelAttributes/ParcelAttributes.css
+++ b/webapp/src/components/ParcelAttributes/ParcelAttributes.css
@@ -9,13 +9,27 @@
   display: none;
 }
 
-.ParcelAttributes .coords {
-  padding: 2px 9px 2px 7px;
-  margin-right: 6px;
-  font-size: 15px;
-  border: 1px solid var(--gray);
+.ParcelAttributes .attribute {
+  padding: 5px 9px 5px 7px;
+  font-size: 14px;
+  font-weight: 500;
   color: var(--text);
+  border: 1px solid var(--gray);
+}
+
+.ParcelAttributes .coords {
   border-radius: 4px;
+}
+
+.ParcelAttributes.has-status .coords {
+  border-right: none;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.ParcelAttributes .status {
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 .ParcelAttributes.clickeable {
