--- a/webapp/src/components/ParcelCoords/ParcelCoords.css
+++ b/webapp/src/components/ParcelCoords/ParcelCoords.css
@@ -1,47 +1,60 @@
-.ParcelAttributes {
+.ParcelCoords {
   display: flex;
   flex-direction: row nowrap;
   align-items: center;
   position: relative;
 }
 
-.ParcelAttributes:after {
+.ParcelCoords:after {
   display: none;
 }
 
-.ParcelAttributes .attribute {
+.ParcelCoords .attribute {
   padding: 5px 9px 5px 7px;
-  font-size: 14px;
-  font-weight: 500;
   color: var(--text);
   border: 1px solid var(--gray);
 }
 
-.ParcelAttributes .coords {
+.ParcelCoords.medium .attribute {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.ParcelCoords.small .attribute {
+  padding: 2px 7px;
+  font-size: 12px;
+  font-weight: 400;
+}
+
+.ParcelCoords.large .attribute {
+  font-size: 16px;
+}
+
+.ParcelCoords .coords {
   border-radius: 4px;
 }
 
-.ParcelAttributes.has-status .coords {
+.ParcelCoords.has-status .coords {
   border-right: none;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
 
-.ParcelAttributes .status {
+.ParcelCoords .status {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
 
-.ParcelAttributes.clickeable {
+.ParcelCoords.clickeable {
   cursor: pointer;
 }
 
-.ParcelAttributes.clickeable:hover .coords {
+.ParcelCoords.clickeable:hover .coords {
   color: var(--red);
   border-color: var(--red);
 }
 
-.ParcelAttributes.deleteable .delete-button {
+.ParcelCoords.deleteable .delete-button {
   display: none;
   font-size: 8px;
   width: 16px;
@@ -54,12 +67,12 @@
   color: var(--text);
   cursor: pointer;
 }
-.ParcelAttributes.deleteable:hover .delete-button {
+.ParcelCoords.deleteable:hover .delete-button {
   display: flex;
   align-items: center;
 }
 
-.ParcelAttributes.deleteable .delete-button i.icon {
+.ParcelCoords.deleteable .delete-button i.icon {
   height: inherit;
   width: inherit;
   margin: 0 0 2px 1px;
