--- a/webapp/src/components/AuctionPage/AuctionPage.css
+++ b/webapp/src/components/AuctionPage/AuctionPage.css
@@ -49,12 +49,12 @@
   margin-bottom: 20px;
 }
 
-.AuctionPage .parcels-included .ParcelCoords {
+.AuctionPage .parcels-included .ParcelCoord {
   margin-top: 20px;
   margin-right: 15px;
 }
 
-.AuctionPage .ParcelCoords.has-status .attribute {
+.AuctionPage .ParcelCoord.has-status .attribute {
   border-color: #676370;
   color: #676370;
 }
