--- a/webapp/src/components/ParcelCoord/ParcelCoord.css
+++ b/webapp/src/components/ParcelCoord/ParcelCoord.css
@@ -1,60 +1,60 @@
-.ParcelCoords {
+.ParcelCoord {
   display: flex;
   flex-direction: row nowrap;
   align-items: center;
   position: relative;
 }
 
-.ParcelCoords:after {
+.ParcelCoord:after {
   display: none;
 }
 
-.ParcelCoords .attribute {
+.ParcelCoord .attribute {
   padding: 5px 9px 5px 7px;
   color: var(--text);
   border: 1px solid var(--gray);
 }
 
-.ParcelCoords.medium .attribute {
+.ParcelCoord.medium .attribute {
   font-size: 14px;
   font-weight: 500;
 }
 
-.ParcelCoords.small .attribute {
+.ParcelCoord.small .attribute {
   padding: 2px 7px;
   font-size: 12px;
   font-weight: 400;
 }
 
-.ParcelCoords.large .attribute {
+.ParcelCoord.large .attribute {
   font-size: 16px;
 }
 
-.ParcelCoords .coords {
+.ParcelCoord .coords {
   border-radius: 4px;
 }
 
-.ParcelCoords.has-status .coords {
+.ParcelCoord.has-status .coords {
   border-right: none;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
 
-.ParcelCoords .status {
+.ParcelCoord .status {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
 
-.ParcelCoords.clickeable {
+.ParcelCoord.clickeable {
   cursor: pointer;
 }
 
-.ParcelCoords.clickeable:hover .coords {
+.ParcelCoord.clickeable:hover .coords {
   color: var(--red);
   border-color: var(--red);
 }
 
-.ParcelCoords.deleteable .delete-button {
+.ParcelCoord.deleteable .delete-button {
   display: none;
   font-size: 8px;
   width: 16px;
@@ -67,12 +67,12 @@
   color: var(--text);
   cursor: pointer;
 }
-.ParcelCoords.deleteable:hover .delete-button {
+.ParcelCoord.deleteable:hover .delete-button {
   display: flex;
   align-items: center;
 }
 
-.ParcelCoords.deleteable .delete-button i.icon {
+.ParcelCoord.deleteable .delete-button i.icon {
   height: inherit;
   width: inherit;
   margin: 0 0 2px 1px;
