--- a/webapp/src/components/Mana/Mana.css
+++ b/webapp/src/components/Mana/Mana.css
@@ -7,16 +7,10 @@
   font-size: 1em;
 }
 
-.Mana .ManaIcon {
-  margin-right: 0.4em;
-}
-
 .Mana.disabled {
   color: var(--gray);
 }
 
-.Mana.disabled .ManaIcon {
-  filter: gray; /* IE6-9 */
-  -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
-  filter: grayscale(1); /* Microsoft Edge and Firefox 35+ */
+.Mana .symbol {
+  transform: translateY(-1px);
 }
