feat: auction parcel list actions (#683)
* feat: remove with tags option from parcel attributes

* chore: cleanup Icon component. Always use semantic

* feat: center auction by clicking on selected parcels

* fix: fixes

* feat: deselect parcels

* feat: sold label

* fix: missing function on estatedetail

* chore: simplify activity page

* feat: add sizeable ParcelCoords and use everywhere

* refactor: rename singlar component

--- a/webapp/src/components/AuctionPage/AuctionPage.css
+++ b/webapp/src/components/AuctionPage/AuctionPage.css
@@ -49,9 +49,14 @@
   margin-bottom: 20px;
 }
 
-.AuctionPage .ParcelAttributes {
-  margin-bottom: 20px;
-  flex-basis: 8%;
+.AuctionPage .parcels-included .ParcelCoord {
+  margin-top: 20px;
+  margin-right: 15px;
+}
+
+.AuctionPage .ParcelCoord.has-status .attribute {
+  border-color: #676370;
+  color: #676370;
 }
 
 .AuctionPage footer {
@@ -102,10 +107,6 @@
 }
 
 @media (max-width: 992px) {
-  .AuctionPage .information-block:first-child {
-    margin-top: 30px;
-  }
-
   .AuctionPage .information-block {
     margin-top: 20px;
   }
