feat: added authorization/confirmation step

--- a/webapp/src/components/ActivityPage/Transaction/Transaction.css
+++ b/webapp/src/components/ActivityPage/Transaction/Transaction.css
@@ -40,6 +40,12 @@
   flex: none;
 }
 
+.Transaction .transaction-avatar .Mana {
+  font-size: 64px;
+  margin-top: 11px;
+  margin-left: -2px;
+}
+
 .Transaction .transaction-timestamp {
   display: inline;
   color: var(--gray);
