style: fix hover color

--- a/webapp/src/themes/variables.css
+++ b/webapp/src/themes/variables.css
@@ -6,7 +6,7 @@
   --outline: #272329;
   --border: #00000005;
   --card-background: #272329;
-  --hover: #2a3246;
+  --hover: #353135;
   --shadow: #0000001f;
   --brightness: brightness(100);
 
