--- a/webapp/src/components/ActivityPage/ActivityPage.css
+++ b/webapp/src/components/ActivityPage/ActivityPage.css
@@ -45,4 +45,9 @@
 .ActivityPage .modal-title {
   font-size: 22px;
   font-weight: bold;
+  margin: 24px 24px 0px 24px;
+}
+
+.ActivityPage .Prompt .modal-header {
+  padding: 8px 8px;
 }
