--- a/webapp/src/components/AuctionPage/AuctionPage.css
+++ b/webapp/src/components/AuctionPage/AuctionPage.css
@@ -12,7 +12,8 @@
 }
 
 .AuctionPage .parcel-preview {
-  height: 400px;
+  height: calc(100vh - 400px);
+  min-height: 400px;
 }
 
 .AuctionPage .auction-details {
@@ -33,14 +34,14 @@
   margin-top: 0;
 }
 
-.AuctionPage .description {
+.AuctionPage .subtitle.description {
   font-size: 18px;
   margin: 15px 0 0;
 }
 
 .AuctionPage .auction-panel {
   border-radius: 8px;
-  border: 1px solid var(--gray);
+  border: 2px solid var(--outline);
 }
 
 .AuctionPage .empty-parcels-message {
@@ -70,13 +71,13 @@
 }
 
 .AuctionPage .ParcelCoord.has-status .attribute {
-  border-color: #676370;
-  color: #676370;
+  border-color: var(--gray);
+  color: var(--gray);
 }
 
 .AuctionPage footer {
   padding: 16px 24px;
-  border-top: 1px solid var(--gray);
+  border-top: 2px solid var(--outline);
   color: var(--gray);
 }
 
@@ -116,12 +117,20 @@
   margin-left: 48px;
 }
 
+.AuctionPage .information-block .secondary {
+  color: var(--gray);
+}
+
+.AuctionPage .information-block .secondary .tooltip {
+  top: -2px;
+}
+
 .AuctionPage .ui.label.pointing {
   border-radius: 6px !important;
 }
 
 .AuctionPage .information-block .ui.label.pointing {
-  background: #676370;
+  background: var(--gray);
   color: white;
   font-weight: normal;
   position: absolute;
