--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -77,9 +77,9 @@ a:hover,
   fill: #ff9990;
 }
 .district {
-  background-color: #b556bd;
-  color: #b556bd;
-  fill: #b556bd;
+  background-color: #83428f;
+  color: #83428f;
+  fill: #83428f;
 }
 .contribution {
   background-color: #4a27d4;
