--- a/webapp/src/components/Chip/Chip.css
+++ b/webapp/src/components/Chip/Chip.css
@@ -1,60 +1,60 @@
-.ParcelCoord {
+.Chip {
   display: flex;
   flex-direction: row nowrap;
   align-items: center;
   position: relative;
 }
 
-.ParcelCoord:after {
+.Chip:after {
   display: none;
 }
 
-.ParcelCoord .attribute {
+.Chip .attribute {
   padding: 5px 9px 5px 7px;
   color: var(--text);
   border: 1px solid var(--gray);
 }
 
-.ParcelCoord.medium .attribute {
+.Chip.medium .attribute {
   font-size: 14px;
   font-weight: 500;
 }
 
-.ParcelCoord.small .attribute {
+.Chip.small .attribute {
   padding: 2px 7px;
   font-size: 12px;
   font-weight: 400;
 }
 
-.ParcelCoord.large .attribute {
+.Chip.large .attribute {
   font-size: 16px;
 }
 
-.ParcelCoord .coords {
+.Chip .content {
   border-radius: 4px;
 }
 
-.ParcelCoord.has-status .coords {
+.Chip.has-status .content {
   border-right: none;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
 
-.ParcelCoord .status {
+.Chip .status {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
 
-.ParcelCoord.clickeable {
+.Chip.clickeable {
   cursor: pointer;
 }
 
-.ParcelCoord.clickeable:hover .coords {
+.Chip.clickeable:hover .content {
   color: var(--red);
   border-color: var(--red);
 }
 
-.ParcelCoord.deleteable .delete-button {
+.Chip.deleteable .delete-button {
   display: none;
   font-size: 8px;
   width: 16px;
@@ -67,12 +67,12 @@
   color: var(--text);
   cursor: pointer;
 }
-.ParcelCoord.deleteable:hover .delete-button {
+.Chip.deleteable:hover .delete-button {
   display: flex;
   align-items: center;
 }
 
-.ParcelCoord.deleteable .delete-button i.icon {
+.Chip.deleteable .delete-button i.icon {
   height: inherit;
   width: inherit;
   margin: 0 0 2px 1px;
